--- a/src/components/Explore/style.css
+++ b/src/components/Explore/style.css
@@ -1,24 +1,24 @@
-.App {
+.explore {
   text-align: center;
 }
 
-.App-logo {
+.explore-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
 
-.App-header {
+.explore-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
 
-.App-title {
+.explore-title {
   font-size: 1.5em;
 }
 
-.App-intro {
+.explore-intro {
   font-size: large;
 }
 
