--- a/src/components/Explore/style.css
+++ b/src/components/Explore/style.css
@@ -1,5 +1,6 @@
 .explore {
   text-align: center;
+  display: flex;
 }
 
 .explore-logo {
@@ -19,10 +20,34 @@
 }
 
 .movies-wall {
-  width: 800px;
+  min-width: 820px;
+  max-width: 900px;
   height: 600px;
   overflow: scroll;
 }
+
+.details-panel {
+  width: 100%;
+
+  position: relative;
+  top: 50%;
+  transform: translateY(10%);
+}
+
+.details-panel .analysis {
+  height: 100px;
+	padding: 0 15px;
+}
+
+.details-panel .reviews {
+	padding: 5px 15px;
+}
+
+.details-panel .new-entry {
+  clear: both;
+	padding: 0 15px;
+}
+
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
