--- a/src/components/Explore/style.css
+++ b/src/components/Explore/style.css
@@ -1,5 +1,13 @@
+.area {
+  background-color: #e4e5ec;
+
+  box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.281);
+  /* border: 1px solid rgb(107, 107, 107);
+  border-radius: 5px; */
+}
+
+/* EXPLORE */
 .explore {
-  text-align: center;
   display: flex;
 }
 
@@ -19,19 +27,28 @@
   font-size: 1.5em;
 }
 
-.movies-wall {
-  min-width: 820px;
-  max-width: 900px;
-  height: 600px;
-  overflow: scroll;
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
 
+
+/* EXPLORE-MOVIES */
+.movies-wall {
+  width: 142vw;
+  height: 82vh;
+  overflow: scroll;
+  margin: 15px;
+}
+
+
+/* EXPLORE-DETAILS */
 .details-panel {
   width: 100%;
-
   position: relative;
-  top: 50%;
-  transform: translateY(10%);
+  margin: 15px;
+  padding: 20px;
+  /* transform: translateY(10%); */
 }
 
 .details-panel .analysis {
@@ -39,17 +56,23 @@
 	padding: 0 15px;
 }
 
+
 .details-panel .reviews {
-	padding: 5px 15px;
+  padding: 0 15px 5px 15px;
+  height: 54vh;
+  overflow: scroll;
 }
+.details-panel .reviews .card-mx {
+  margin-bottom: 10px;
+}
+.details-panel .reviews img, p {
+  padding: 1em;
+  margin: 0;
+}
+
+
 
 .details-panel .new-entry {
   clear: both;
 	padding: 0 15px;
-}
-
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
