--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: #E1E1E1;
+  background-color: rgb(53, 56, 63);
 }
