--- a/src/components/Explore/style.css
+++ b/src/components/Explore/style.css
@@ -2,8 +2,6 @@
   background-color: #e4e5ec;
 
   box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.281);
-  /* border: 1px solid rgb(107, 107, 107);
-  border-radius: 5px; */
 }
 
 /* EXPLORE */
@@ -52,18 +50,22 @@
 }
 
 .details-panel .analysis {
-  height: 100px;
-	padding: 0 15px;
+  height: 85px;
+  padding: 15px;
+  text-align: center;
 }
 
 
 .details-panel .reviews {
-  padding: 0 15px 5px 15px;
+  padding: 0 15px 0 15px;
   height: 54vh;
   overflow: scroll;
+  background-color: rgb(71, 75, 85);
 }
 .details-panel .reviews .card-mx {
-  margin-bottom: 10px;
+  margin: 20px 10px 20px 10px;
+  box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.281);
+  /* zoom: .8; */
 }
 .details-panel .reviews img, p {
   padding: 1em;
