--- a/src/components/MyReviews/style.css
+++ b/src/components/MyReviews/style.css
@@ -31,8 +31,19 @@
   background-color: rgb(71, 75, 85);
 }
 .myreviews-panel .reviews .card-mx {
+  display: flex;
   margin: 20px 10px 20px 10px;
   box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.281);
+}
+.myreviews-panel .reviews .card-mx .details{
+  width: 400px;
+}
+.myreviews-panel .reviews .card-mx .show{
+  flex: 1;
+}
+.myreviews-panel .reviews .card-mx button {
+  float:right;
+  height: 100%;
 }
 .myreviews-panel .reviews img, p {
   padding: 1em;
